k8s/db-deployment-manifest.yaml
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: devops-cycle-test
  labels:
    app: mysql
    tier: database
spec:
  selector: 
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        app: mysql
        tier: database
    spec:
      containers:
        - image: mysql:5.7 
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
          args:
            - "--ignore-db-dir=lost+found"
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:        
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql 
      volumes:
        - name: mysql-persistent-storage 
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: devops-cycle-test
  labels:
    app: mysql
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:       
    app: mysql
    tier: database
  clusterIP: None
