k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: devops-cycle-test
spec:
  selector:
    matchLabels:
      app: ui-deployment
  replicas: 4
  template:
    metadata:
      labels:
        app: ui-deployment
    spec:
      containers:
        - name: ui-deployment-container
          image: medelouali/react-example-image:1.0
          resources:
            limits:
              cpu: "0.6"
              memory: "512Mi"
            requests:
              cpu: "0.3"
              memory: "256Mi"
          ports:
            - containerPort: 80

---
apiVersion: v1 
kind: Service 
metadata: 
  name: ui-service
  namespace: devops-cycle-test
spec:
  selector:
    app: ui-deployment
  ports:
    - protocol: "TCP"
      port: 3001
      targetPort: 80
  type: ClusterIP #
