k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops-cycle-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: app-internal-service
            port: 
              number: 8080
